# GraphQL-Server

./: README.md  pyproject.toml  setup.sh
main/: app.py  hello.py
