[tool.poetry]
name = "graphql-server"
version = "0.1.0"
description = ""
authors = ["Tomohiro Inoue <55827264+tomoino@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "2.1.6"
Flask = "1.0.3"
Flask-GraphQL = "2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
